Adding the About Section in the index.html file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<! -- This is index.html file-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,10 +6,9 @@
   <title>My Profile</title>
 </head>
 <body>
-  <h1> Dr. Patha Srilatha (Alias Dr. Doddi Srilatha) </h1>
-  <h2>Associate Professor in CSE Department, KLH-B </h2>
-  <p> Dr. Doddi Srilatha is working as an Associate Professor in the Department of CSE at Koneru Lakshmaiah Education Foundation, Bachupally Campus, Hyderabad, India. 
-    She received her B.Tech and M.Tech from JNTU Hyderabad, India. She awarded Ph.D from REVA University, Bengaluru, India. Her area of interest includes software engineering, cloud computing, network security, data mining, and machine learning. She is an Oracle-certified Java Programmer and AWS-certified Cloud Practitioner and Solutions Architect. She has published more than 15 research papers in reputed journals. She likes building web applications and learning new technologies. 
-  </p>
+  <section id="about">
+  <h2>About</h2>
+  <p>Welcome to our website! This project is created to demonstrate version control using Git and HTML fundamentals.</p>
+</section>
 </body>
 </html>
